# harmonica

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  temp.mid
docs/: build.bat
docs/source/: conf.py  index.rst
harmonica/: __init__.py  _utility.py  changes.py  chord.py  melody.py  note_gen.py  scale.py  timeline.py  util.py  utility.py  velocity.py
harmonica/_chord/: __init__.py  _chord.py  _find.py  _find_pitchset.py  _pitchset.py  _pitchsetshape.py
harmonica/_scale/: __init__.py  _find.py  _scale.py
harmonica/chord/: __init__.py  _find_pitchsets.py  _pitchset.py  _pitchsetshape.py
harmonica/find/: __init__.py  _find_pcset.py  _find_pitchset.py
harmonica/pitch/: __init__.py  _changes.py  _melody.py  _pitchfunc.py  _pitchset.py  _pitchsetshape.py  _scales.py  changes.py  melody.py
harmonica/scale/: __init__.py  _base.py  _find_pcset.py  find.py  scale.py
harmonica/time/: __init__.py  _clip.py  _event.py  _onsetfunc.py  _timefunc.py
harmonica/utility/: __init__.py  _gm.py  _mixed.py  _utility.py
notebooks/: chord_inversions.ipynb  chord_voicings.ipynb  connecting_chords.ipynb  embedded_melodies.ipynb  embedded_pitch_seqs.ipynb  fitting_pseq_to_pcset_seq.ipynb  previewing rhythm parts.ipynb  previewing_midi.ipynb  scratch.py  time functions.ipynb
notebooks/brainstorming/: 2025-11-30.ipynb  chord_inversions.ipynb  chord_voicings.ipynb  fitting_pseq_to_pcset_seq.ipynb  scratch.py
notebooks/ideas/: chord_inversions.ipynb  chord_voicings.ipynb  embedded_pitch_seqs.ipynb  harmonizing a melody.ipynb  previewing rhythm parts.ipynb  previewing_midi.ipynb  time functions.ipynb
notebooks/journal/: 2025-12-03.ipynb  2025-12-05.ipynb  2025-12-06.ipynb  2025-12-08.ipynb  2025-12-09.ipynb  2025-12-10.ipynb  2025-12-11.ipynb  2025-12-12.ipynb  (+3 more)
sandbox/: broken chord.py  notegen.py
tests/: conftest.py  test_changes.py  test_chord.py  test_clip.py  test_melody.py  test_scale.py  test_timeline.py  test_util.py
(+6 files in other folders)
