[project]
name = "harmonica"
version = "0.1.0"
description = "A Python library for the generation, analysis and transformation of music theoretical objects."
authors = [
    {name = "Josiah Huergo", email = "josiah@siahbug.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mido>=1.3.3",
    "python-rtmidi>=1.5.8"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["harmonica", "sandbox"]

[tool.pyright]
typeCheckingMode = "off"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
ignore_missing_imports = true
warn_unreachable = true
exclude = [
    "./tests/*",
    "./docs/*"
]